--- a/app/src/main/res/layout-land/fragment_tarea.xml
+++ b/app/src/main/res/layout-land/fragment_tarea.xml
@@ -1,68 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_margin="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/view_camera_and_title"/>
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource">
+    <include layout="@layout/view_camera_and_title_landscape" />
 
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/tarea_date"
-            android:layout_width="321dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boton_redondeado"
-            android:layout_marginLeft="15dp"
-            android:text="@string/tarea_pick_date" />
-
-        <Button
-            android:id="@+id/tarea_time"
-            android:layout_width="321dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boton_redondeado"
-            android:text="@string/tarea_pick_time" />
-    </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="5dp"
+    >
 
-    <CheckBox
-        android:id="@+id/tarea_completed"
-        android:layout_width="221dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="15dp"
-        android:text="@string/tarea_completed" />
-
-    <CheckBox
-        android:id="@+id/tarea_activated"
-        android:layout_width="221dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="15dp"
-        android:text="@string/tarea_activated" />
+    <Button
+        android:id="@+id/tarea_date"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:background="@drawable/boton_redondeado"
+        android:layout_marginBottom="10dp"
+        android:text="@string/tarea_pick_date"
+        />
+    <Button
+        android:id="@+id/tarea_time"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:background="@drawable/boton_redondeado"
+        android:text="@string/tarea_pick_time"
+        />
 </LinearLayout>
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <CheckBox
+        android:id="@+id/tarea_completed"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="25dp"
+        android:text="@string/tarea_completed"/>
+    <CheckBox
+        android:id="@+id/tarea_activated"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="25dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/tarea_activated"/>
+
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/categoria_titulo"
+            />
+        <Spinner
+            android:id="@+id/category_spinner"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:prompt="@string/categoria_inicial"
+            />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
+        >
+
+        <Button
+            android:id="@+id/add_category_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boton_redondeado"
+            android:text="@string/categoria_añadir"
+            />
+        <Button
+            android:id="@+id/delete_category_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/boton_redondeado"
+            android:text="@string/categoria_borrar"
+            />
+
+    </LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="5dp"
+
+    >
     <Button
         android:id="@+id/tarea_person"
-        android:layout_width="321dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:background="@drawable/boton_redondeado"
-        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/tarea_person_to_be_called"/>
-
     <Button
         android:id="@+id/tarea_call"
-        android:layout_width="321dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:background="@drawable/boton_redondeado"
-        android:text="@string/tarea_call_person" />
+        android:text="@string/tarea_call_person"/>
+
 </LinearLayout>
 
 </LinearLayout>
