--- a/app/src/main/res/layout-land/view_camera_and_title_landscape.xml
+++ b/app/src/main/res/layout-land/view_camera_and_title_landscape.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,28 +28,52 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
-        <TextView
-            style="?android:listSeparatorTextViewStyle"
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="5dp">
+
+    <TextView
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="@string/tarea_title_label"/>
+    <EditText
+        android:id="@+id/tarea_title"
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:hint="@string/tarea_title_hint"/>
+</LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tarea_title_label"/>
-        <EditText
-            android:id="@+id/tarea_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:hint="@string/tarea_title_hint"/>
-        <TextView
-            style="?android:listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/tarea_description_label"/>
-        <EditText
-            android:id="@+id/tarea_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:hint="@string/tarea_description_hint"/>
+            android:orientation="horizontal"
+            android:layout_marginBottom="5dp">
+
+
+            <TextView
+                style="?android:listSeparatorTextViewStyle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/tarea_description_label"/>
+            <EditText
+                android:id="@+id/tarea_description"
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:hint="@string/tarea_description_hint"/>
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
