--- a/app/src/main/res/layout/list_item_tarea.xml
+++ b/app/src/main/res/layout/list_item_tarea.xml
@@ -9,20 +9,32 @@
 
     <TextView
         android:id="@+id/task_title"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="0dp"
         android:text="Title task"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/date_task"
         app:layout_constraintStart_toEndOf="@+id/task_solved"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/task_category"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:text="Title category"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/date_task"
+        app:layout_constraintStart_toEndOf="@+id/task_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
         android:id="@+id/date_task"
-        android:layout_width="119dp"
+        android:layout_width="100dp"
         android:layout_height="25dp"
         android:text="Date Task"
         app:layout_constraintBottom_toBottomOf="parent"
