--- a/app/src/main/res/layout-land/view_camera_and_title_landscape.xml
+++ b/app/src/main/res/layout-land/view_camera_and_title_landscape.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -13,7 +16,7 @@
         <ImageView
             android:id="@+id/tarea_photo"
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="40dp"
             android:scaleType="centerInside"
             android:background="@android:color/darker_gray"
             android:cropToPadding="true"/>
@@ -40,13 +43,16 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:textSize="12dp"
         android:text="@string/tarea_title_label"/>
     <EditText
         android:id="@+id/tarea_title"
         android:layout_width="0dp"
-        android:layout_weight="3"
+        android:layout_weight="5"
+        android:maxLines="1"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="2dp"
         android:hint="@string/tarea_title_hint"/>
 </LinearLayout>
 
@@ -63,13 +69,16 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:textSize="12dp"
                 android:text="@string/tarea_description_label"/>
             <EditText
                 android:id="@+id/tarea_description"
                 android:layout_width="0dp"
-                android:layout_weight="3"
+                android:layout_weight="5"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
+                android:maxLines="1"
+                android:layout_marginTop="2dp"
                 android:hint="@string/tarea_description_hint"/>
         </LinearLayout>
 
