--- a/app/src/main/res/layout/list_item_tarea.xml
+++ b/app/src/main/res/layout/list_item_tarea.xml
@@ -23,7 +23,7 @@
         android:id="@+id/task_category"
         android:layout_width="100dp"
         android:layout_height="0dp"
-        android:text="Title category"
+        android:text="Sin categoria"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/date_task"
