--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -20,7 +20,8 @@
             android:id="@+id/tarea_camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_camera"/>
+            android:src="@drawable/icono_add_image"
+        />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
