--- a/app/src/main/res/layout/list_item_tarea.xml
+++ b/app/src/main/res/layout/list_item_tarea.xml
@@ -1,54 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:id="@+id/task_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5"/>
 
     <TextView
         android:id="@+id/task_title"
-        android:layout_width="150dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Title task"
         android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/task_solved"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/task_icon"
+        app:layout_constraintTop_toTopOf="@+id/task_icon"
+        app:layout_constraintBottom_toTopOf="@+id/task_category"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/task_category"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        android:text=""
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/date_task"
-        app:layout_constraintStart_toEndOf="@+id/task_title"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Category"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/task_icon"
+        app:layout_constraintTop_toBottomOf="@+id/task_title"
+        app:layout_constraintBottom_toBottomOf="@+id/task_title"
+        app:layout_constraintVertical_bias="0.8" />
 
     <TextView
         android:id="@+id/date_task"
-        android:layout_width="100dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Date Task"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/task_icon"
+        app:layout_constraintBottom_toTopOf="@+id/task_solved"
+        app:layout_constraintVertical_bias="0.2"/>
 
     <ImageView
         android:id="@+id/task_solved"
         android:layout_width="38dp"
         android:layout_height="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date_task"
+        app:layout_constraintBottom_toBottomOf="@+id/date_task"
+        app:layout_constraintVertical_bias="0.5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
